@@ -7,6 +7,7 @@ copyright_holder = foobar
 copyright_year   = 2009
 
 [LocaleMsgfmt]
+recursive = 1
 locale = share/locale1
 locale = share/locale2
 locale = share/locale3
